# GradeManager-CPP

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: PULL_REQUEST_TEMPLATE.md
data/: semesters.json
deprecated/: App.cpp  ConsoleUIManager.cpp
doc/: grade-manager-checklist.md  imgui-checklist.md
inc/: App.h  Application.h  Course.h  GradeManager.h  Semester.h  SemesterJSON.h  UIManager.h
source/: ConsoleUIManager.cpp  ConsoleUIManager.h  Course.cpp  Course.h  GradeManager.cpp  GradeManager.h  Semester.cpp  Semester.h  SemesterJSON.cpp  SemesterJSON.h  grade_manager.cpp
source/cpp/: ConsoleUIManager.cpp  Course.cpp  grade_manager.cpp
source/header/: Course.h
src/: App.cpp  Application.cpp  Course.cpp  GradeManager.cpp  Semester.cpp  SemesterJSON.cpp  UIManager.cpp  grade_manager.cpp  test_imgui.cpp  test_ingui.cpp
tests/: Course.test.cpp  Semester.test.cpp  SemesterJSON.test.cpp
